# ansible-alwaysdata

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
christophehenry/alwaysdata/: README.md  __init__.py  galaxy.yml
christophehenry/alwaysdata/plugins/module_utils/: alwaysdata.py
christophehenry/alwaysdata/plugins/modules/: debug.py  dnsrecord.py
christophehenry/alwaysdata/tests/integration/targets/dnsrecord/tasks/: main.yml
christophehenry/alwaysdata/tests/unit/: test_dnsrecord.py
community/alwaysdata/: README.md  __init__.py  galaxy.yml
community/alwaysdata/meta/: runtime.yml
community/alwaysdata/plugins/modules/: __init__.py  dnsrecord.py  domain.py
community/alwaysdata/tests/integration/targets/dnsrecord/tasks/: main.yml
community/alwaysdata/tests/unit/: test_dnsrecord.py  utils.py
